fix: Adjust z-index and border styles for embla component to improve visual hierarchy

--- a/client/src/components/SmoothSlider/css/embla.css
+++ b/client/src/components/SmoothSlider/css/embla.css
@@ -17,24 +17,24 @@
   content: '';
   display: block;
   height: calc(50% - 32px / 2);
-  z-index: 1;
+  z-index: 2;
   pointer-events: none;
 }
 .embla:before {
-  top: -0.5px;
-  border-bottom: 1px solid rgba(var(--text-high-contrast-rgb-value), 0.4);
+  top: 0;
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
   background: linear-gradient(
     to top,
-    rgba(var(--background-site-rgb-value), 0.65) 0%,
+    rgba(var(--background-site-rgb-value), 0.7) 0%,
     rgba(var(--background-site-rgb-value), 1) 100%
   );
 }
 .embla:after {
-  bottom: -0.5px;
-  border-top: 1px solid rgba(var(--text-high-contrast-rgb-value), 0.4);
+  bottom: 0;
+  border-top: 1.5px solid rgba(0, 0, 0, 0.2);
   background: linear-gradient(
     to bottom,
-    rgba(var(--background-site-rgb-value), 0.65) 0%,
+    rgba(var(--background-site-rgb-value), 0.7) 0%,
     rgba(var(--background-site-rgb-value), 1) 100%
   );
 }
